<resources>
    <string name="appName">DogApp</string>
    <string name="nuevaCita">Nueva Cita</string>
    <string name="nombreMascota">Nombre de la mascota</string>
    <string name="raza">  Raza</string>
    <string name="nombrePropietario">Nombre del propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="sintomas">Síntomas</string>
    <string name="guardarCita">Guardar Cita</string>
    <string name="editarCita">Editar Cita</string>
    <string name="volver">Volver</string>
    <string name="eliminarcita">Eliminar Cita</string>
    <string name="propietario">Propietario:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="numeroCita">n</string>
    <string name="desc_imagen_mascota">Descripcion mascota</string>


    <!-- Lista de síntomas -->
    <string-array name="listaSintomas">
        <item>Solo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Tiene garrapatas</item>
        <item>Bota demasiado pelo</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
