<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditarCita">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowback"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/buttonBackgroundColor" />

        <!-- TextView personalizado centrado -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editarcita"
            android:textAppearance="@style/toolbarTitle"
            />


    </androidx.appcompat.widget.Toolbar>


            <!-- Campos del formulario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombreMascota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.22"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>


            <!-- Campo: Raza -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/raza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteRaza"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintVertical_bias="0.33"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>



            <!-- Campo: Dueño -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombrePropietario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombrePropietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.44"
            app:layout_constraintHorizontal_bias="0.44"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo: telefono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.54"
            app:layout_constraintHorizontal_bias="0.5"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>


                <!-- Botón Guardar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btneditarcita"
            style="@style/buttonEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editarcita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintHorizontal_bias="0.5"
            android:textSize="14sp"
            android:enabled="false"
            app:icon="@drawable/pencil"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            />




</androidx.constraintlayout.widget.ConstraintLayout>